# svc/home-api/src/main/java/com/breathinghouse/homeapi/rooms/RoomsResponse.java
@@ -1,0 +1,6 @@
+package com.breathinghouse.homeapi.rooms;
+
+import java.util.List;
+
+public record RoomsResponse(List<RoomSummary> rooms) {
+}
